--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+.gitignore
+2015
 # Created by https://www.gitignore.io/api/linux,python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=linux,python,visualstudiocode
 
